deploy/k8s/00-runtime-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: runtime
  labels:
    app.kubernetes.io/part-of: noctf
    noctf.io/purpose: challenge-runtime
