deploy/k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: noctf
  labels:
    app: minio
    app.kubernetes.io/part-of: noctf
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
  type: ClusterIP
